[package]
name = "hyper-openssl"
version = "0.8.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Hyper TLS support via OpenSSL"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/hyper-openssl"
readme = "README.md"
exclude = ["test/*"]

[features]
default = ["runtime"]

runtime = ["hyper/runtime"]

[dependencies]
antidote = "1.0.0"
bytes = "0.5"
http = "0.2"
hyper = { git = "https://github.com/inikulin/hyper", rev = "388ded50c2c0a0e4b446b22e00856bf0132246a3", default-features = false }
linked_hash_set = "0.1"
once_cell = "1.0"
openssl = "0.10.19"
openssl-sys = "0.9.26"
tokio = "0.2"
tokio-openssl = "0.4"
tower-layer = "0.3"

[dev-dependencies]
hyper = { git = "https://github.com/inikulin/hyper", rev = "388ded50c2c0a0e4b446b22e00856bf0132246a3" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
