[package]
name = "hyper-openssl"
version = "0.8.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
description = "Hyper TLS support via OpenSSL"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/hyper-openssl"
readme = "README.md"
exclude = ["test/*"]

[features]
default = ["runtime"]

runtime = ["hyper/runtime"]

[dependencies]
antidote = "1.0.0"
bytes = "0.5"
http = "0.2"
hyper = { git = "https://github.com/inikulin/hyper", rev = "388ded50c2c0a0e4b446b22e00856bf0132246a3", default-features = false }
linked_hash_set = "0.1"
once_cell = "1.0"
openssl = { git = "https://github.com/inikulin/rust-openssl", rev = "2eef8250c90c5d2f8e48cbac3197fd6c2ca97400", features = ["vendored"] }
openssl-sys = { git = "https://github.com/inikulin/rust-openssl", rev = "2eef8250c90c5d2f8e48cbac3197fd6c2ca97400", features = ["vendored"] }
tokio = "0.2"
tokio-openssl = {  git = "https://github.com/inikulin/tokio-openssl", rev="a5652421b9d2dbaa5bc8ef4b207a9ed5737b7df1" }
tower-layer = "0.3"

[dev-dependencies]
hyper = { git = "https://github.com/inikulin/hyper", rev = "388ded50c2c0a0e4b446b22e00856bf0132246a3" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
